[EDELIVERY-1207] - created the distribution module and moved the assembly files in the new module; deleted the docbkx files